infrastructure/aws/cloudformation/csye6225-cf-application.json
{"AWSTemplateFormatVersion": "2010-09-09",
 "Resources": {
   "InstanceAssignment6Application": {
     "Type": "AWS::EC2::Instance", 
     "Properties": {
       "ImageId" : "ami-66506c1c",
	   "Tags": [{"Key": "Name", "Value": "Assignment6Application-csye6225-Instance"}],
	   "InstanceType": "t2.micro",
	   "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash -xe \n",
                                "sudo apt-get update \n",
                                "sudo apt-get install openjdk-8-jdk -y\n",
                                "sudo apt-get install ruby -y \n",
                                "sudo apt-get install wget -y \n",
                                "sudo apt-get install python -y \n",
								"sudo curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash - \n",
								"sudo apt-get install -y nodejs \n",
								"sudo npm install npm@latest -g \n",
								"sudo npm install @angular/cli \n",
                                "sudo apt-get update \n",
                                "sudo wget https://aws-codedeploy-us-east-1.s3.amazonaws.com/latest/install \n",
                                "sudo chmod +x ./install \n",
                                "sudo ./install auto \n",
                                "sudo service codedeploy-agent start \n",
                                "sudo apt-get install tomcat8 -y \n",
								"sudo export DB_USERNAME=root \n",
								"sudo export DB_PASSWORD= \n",
                                "sudo service tomcat8 restart \n"
                            ]
                        ]
                    }
				},
       "DisableApiTermination" : "false",
       "BlockDeviceMappings" : [{
       	"DeviceName": "/dev/sdm",
       	"Ebs" : {
           "VolumeType": "gp2",
           "VolumeSize": "16"
          }
        }, {
       	"DeviceName" : "/dev/sdk",
       	"NoDevice" : {}
        }]
      }
    },"PrivateRouteTableAssignment6Application": {
   	  "Type": "AWS::EC2::RouteTable",
   	  "Properties": {
   	  	"VpcId": "vpc-1cf32167",
   	  	"Tags": [{"Key": "Name", "Value": "Assignment6Application-csye6225-private-route-table"}]
   	  }
   }, "PublicRouteTableAssignment6Application": {
   	  "Type": "AWS::EC2::RouteTable",
   	  "Properties": {
   	  	"VpcId": "vpc-1cf32167",
   	  	"Tags": [{"Key": "Name", "Value": "Assignment6Application-csye6225-public-route-table"}]
   	  }
   }, "SubnetWebServerAssignment6Application": {
   	  "Type": "AWS::EC2::Subnet",
   	  "Properties": {
   	  	"VpcId": "vpc-1cf32167",
		"CidrBlock": "10.0.0.0/24",
		"AvailabilityZone": "us-east-1a",
   	  	"Tags": [{"Key": "Name", "Value": "Assignment6Application-csye6225-web-server-subnet-table"}]
   	  }
   }, "SubnetDatabaseAssignment6Application": {
   	  "Type": "AWS::EC2::Subnet",
   	  "Properties": {
   	  	"VpcId": "vpc-1cf32167",
		"CidrBlock": "10.0.1.0/24",
		"AvailabilityZone": "us-east-1b",
   	  	"Tags": [{"Key": "Name", "Value": "Assignment6Application-csye6225-database-subnet-table"}]
   	  }
   }, "DBSubnetGroupAssignment6Application": {
   	  "Type": "AWS::RDS::DBSubnetGroup",
   	  "Properties": {
   	  	"DBSubnetGroupDescription": "DB Subnet",
		"SubnetIds": [
		 	{"Ref": "SubnetWebServerAssignment6Application"},
			{"Ref": "SubnetDatabaseAssignment6Application"}
		],
   	  	"Tags": [{"Key": "Name", "Value": "Assignment6Application-csye6225-database-subnet-group"}]
   	  }
   }, "PublicTableAssociationAssignment6Application": {
   	  "Type": "AWS::EC2::SubnetRouteTableAssociation",
   	  "Properties": {
   	  	"RouteTableId": {"Ref": "PublicRouteTableAssignment6Application"},
		"SubnetId": {"Ref": "SubnetWebServerAssignment6Application"}
   	  }
   }, "PrivateTableAssociationAssignment6Application": {
   	  "Type": "AWS::EC2::SubnetRouteTableAssociation",
   	  "Properties": {
   	  	"RouteTableId": {"Ref": "PrivateRouteTableAssignment6Application"},
		"SubnetId": {"Ref": "SubnetDatabaseAssignment6Application"}
   	  }
   }, "EC2SecurityGroupAssignment6Application": {
   	  "Type": "AWS::EC2::SecurityGroup",
   	  "Properties": {
   	  	"GroupDescription": "Allow http to client host",
   	  	"VpcId": "vpc-1cf32167",
   	  	"SecurityGroupIngress": [{
   	  		"IpProtocol": "tcp",
   	  		"FromPort": "22",
   	  		"ToPort": "22",
   	  		"CidrIp": "0.0.0.0/0"
   	  	}, {
   	  		"IpProtocol": "tcp",
   	  		"FromPort": "80",
   	  		"ToPort": "80",
   	  		"CidrIp": "0.0.0.0/0"
   	  	}, {
   	  		"IpProtocol": "tcp",
   	  		"FromPort": "443",
   	  		"ToPort": "443",
   	  		"CidrIp": "0.0.0.0/0"
   	  	}, {
   	  		"IpProtocol": "tcp",
   	  		"FromPort": "3306",
   	  		"ToPort": "3306",
   	  		"CidrIp": "0.0.0.0/0"
   	  	}]
   	  }
   }, "RDSDBSecurityGroupAssignment6Application": {
   	  "Type": "AWS::RDS::DBSecurityGroup",
   	  "Properties": {
   	  	"EC2VpcId": "vpc-1cf32167",
   	  	"DBSecurityGroupIngress": [{
   	  		"EC2SecurityGroupId": { "Ref": "EC2SecurityGroupAssignment6Application"}
   	  	}],
   	  	"GroupDescription": "Front end access"
   	  }
   }, "DatabaseAssignment6Application": {
   	  "Type": "AWS::DynamoDB::Table",
   	  "Properties": {
   	  	"TableName": "csye6225",
		"AttributeDefinitions": [
			{
				"AttributeName": "id",
				"AttributeType": "S"
			}
		],
		"KeySchema": [
			{
				"AttributeName": "id",
				"KeyType": "HASH"
			}
		],
		"ProvisionedThroughput": {
			"ReadCapacityUnits": 5,
			"WriteCapacityUnits": 5
		}
   	  }
   }, "RDSDBInstanceAssignment6Application": {
   	  "Type": "AWS::RDS::DBInstance",
   	  "Properties": {
   	  	"DBName": "csye6225",
		"AllocatedStorage": 100,
   	  	"DBInstanceClass": "db.t2.medium",
   	  	"Engine": "MySQL",
   	  	"EngineVersion": "5.6.37",
   	  	"MasterUsername": "csye6225master",
   	  	"MasterUserPassword": "csye6225password",
   	  	"DBSubnetGroupName": {"Ref": "DBSubnetGroupAssignment6Application"},
   	  	"PubliclyAccessible": "false"
   	  }
   }, "RouteAssignment6Application": {
   	  "Type": "AWS::EC2::Route",
   	  "Properties": {
   	  	 "RouteTableId": {"Ref": "PublicRouteTableAssignment6Application"},
   	  	 "DestinationCidrBlock": "0.0.0.0/0",
   	  	 "GatewayId": "igw-30a95748"
   	  }
   }
  }  
}
