infrastructure/aws/cloudformation/resources.json
{"AWSTemplateFormatVersion": "2010-09-09",
 "Resources": {
   "InternetGatewaytest": {
     "Type": "AWS::EC2::InternetGateway", 
     "Properties": {
       "Tags": [{"Key": "name", "Value": "test-csye6225-InternetGateway"}]
     }
   }
  ,"VPCtest": {
     "Type": "AWS::EC2::VPC", 
     "Properties": {
       "CidrBlock": "10.0.0.0/16",
       "Tags": [{"Key": "name", "Value": "test-csye6225-vpc"}]
     }
   },"AttachedGatewaytest": {
   	  "Type": "AWS::EC2::VPCGatewayAttachment",
   	  "Properties": {
   	  	"VpcId": {"Ref": "VPCtest"},
   	  	"InternetGatewayId": {"Ref": "InternetGatewaytest"}
   	  }
   }, "PrivateRouteTabletest": {
   	  "Type": "AWS::EC2::RouteTable",
   	  "Properties": {
   	  	"VpcId": {"Ref": "VPCtest"},
   	  	"Tags": [{"Key": "name", "Value": "test-csye6225-private-route-table"}]
   	  }
   }, "PublicRouteTabletest": {
   	  "Type": "AWS::EC2::RouteTable",
   	  "Properties": {
   	  	"VpcId": {"Ref": "VPCtest"},
   	  	"Tags": [{"Key": "name", "Value": "test-csye6225-public-route-table"}]
   	  }
   }, "SubnetWebServertest": {
   	  "Type": "AWS::EC2::Subnet",
   	  "Properties": {
   	  	"VpcId": {"Ref": "VPCtest"},
		"CidrBlock": "10.0.0.0/24",
		"AvailabilityZone": "us-east-1a",
   	  	"Tags": [{"Key": "name", "Value": "test-csye6225-web-server-subnet-table"}]
   	  }
   }, "SubnetDatabasetest": {
   	  "Type": "AWS::EC2::Subnet",
   	  "Properties": {
   	  	"VpcId": {"Ref": "VPCtest"},
		"CidrBlock": "10.0.1.0/24",
		"AvailabilityZone": "us-east-1b",
   	  	"Tags": [{"Key": "name", "Value": "test-csye6225-database-subnet-table"}]
   	  }
   }, "DBSubnetGrouptest": {
   	  "Type": "AWS::RDS::DBSubnetGroup",
   	  "Properties": {
   	  	"DBSubnetGroupDescription": "DB Subnet",
		"SubnetIds": [
		 	{"Ref": "SubnetWebServertest"},
			{"Ref": "SubnetDatabasetest"}
		],
   	  	"Tags": [{"Key": "name", "Value": "test-csye6225-database-subnet-group"}]
   	  }
   }, "PublicTableAssociationtest": {
   	  "Type": "AWS::EC2::SubnetRouteTableAssociation",
   	  "Properties": {
   	  	"RouteTableId": {"Ref": "PublicRouteTabletest"},
		"SubnetId": {"Ref": "SubnetWebServertest"}
   	  }
   }, "PrivateTableAssociationtest": {
   	  "Type": "AWS::EC2::SubnetRouteTableAssociation",
   	  "Properties": {
   	  	"RouteTableId": {"Ref": "PrivateRouteTabletest"},
		"SubnetId": {"Ref": "SubnetDatabasetest"}
   	  }
   }, "EC2SecurityGrouptest": {
   	  "Type": "AWS::EC2::SecurityGroup",
   	  "Properties": {
   	  	"GroupDescription": "Allow http to client host",
   	  	"VpcId": {"Ref": "VPCtest"},
   	  	"SecurityGroupIngress": [{
   	  		"IpProtocol": "tcp",
   	  		"FromPort": "22",
   	  		"ToPort": "22",
   	  		"CidrIp": "0.0.0.0/0"
   	  	}, {
   	  		"IpProtocol": "tcp",
   	  		"FromPort": "80",
   	  		"ToPort": "80",
   	  		"CidrIp": "0.0.0.0/0"
   	  	}, {
   	  		"IpProtocol": "tcp",
   	  		"FromPort": "443",
   	  		"ToPort": "443",
   	  		"CidrIp": "0.0.0.0/0"
   	  	}, {
   	  		"IpProtocol": "tcp",
   	  		"FromPort": "3306",
   	  		"ToPort": "3306",
   	  		"CidrIp": "0.0.0.0/0"
   	  	}]
   	  }
   }, "RDSDBSecurityGrouptest": {
   	  "Type": "AWS::RDS::DBSecurityGroup",
   	  "Properties": {
   	  	"EC2VpcId": {"Ref": "VPCtest"},
   	  	"DBSecurityGroupIngress": [{
   	  		"EC2SecurityGroupId": { "Ref": "EC2SecurityGrouptest"}
   	  	}],
   	  	"GroupDescription": "Front end access"
   	  }
   }, "Databasetest": {
   	  "Type": "AWS::DynamoDB::Table",
   	  "Properties": {
   	  	"TableName": "csye6225",
		"AttributeDefinitions": [
			{
				"AttributeName": "id",
				"AttributeType": "S"
			}
		],
		"KeySchema": [
			{
				"AttributeName": "id",
				"KeyType": "HASH"
			}
		],
		"ProvisionedThroughput": {
			"ReadCapacityUnits": 5,
			"WriteCapacityUnits": 5
		}
   	  }
   }, "RDSDBInstancetest": {
   	  "Type": "AWS::RDS::DBInstance",
   	  "Properties": {
   	  	"DBName": "csye6225",
		"AllocatedStorage": 100,
   	  	"DBInstanceClass": "db.t2.medium",
   	  	"Engine": "MySQL",
   	  	"EngineVersion": "5.6.37",
   	  	"MasterUsername": "csye6225master",
   	  	"MasterUserPassword": "csye6225password",
   	  	"DBSubnetGroupName": {"Ref": "DBSubnetGrouptest"},
   	  	"PubliclyAccessible": "false"
   	  }
   }, "Routetest": {
   	  "Type": "AWS::EC2::Route",
   	  "Properties": {
   	  	 "RouteTableId": {"Ref": "PublicRouteTabletest"},
   	  	 "DestinationCidrBlock": "0.0.0.0/0",
   	  	 "GatewayId": {"Ref": "InternetGatewaytest"}
   	  }
   }
  }  
}
